Feat: refactoring icons and their visibilities

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -86,9 +86,10 @@
         android:paddingEnd="30dp"/>
 
     <ImageView
+        android:id="@+id/ivHidePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_eye_show"
+        android:src="@drawable/check_show_hide"
         app:layout_constraintTop_toTopOf="@id/etPassword"
         app:layout_constraintBottom_toBottomOf="@id/etPassword"
         app:layout_constraintRight_toRightOf="@id/etPassword"
@@ -123,9 +124,10 @@
         android:paddingEnd="30dp"/>
 
     <ImageView
+        android:id="@+id/ivHideConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_eye_show"
+        android:src="@drawable/check_show_hide"
         app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
         app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
         app:layout_constraintRight_toRightOf="@id/etConfirmPassword"
