--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
             android:paddingEnd="30dp"/>
 
     <ImageView
+        android:id="@+id/verifyEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_check"
@@ -71,6 +72,7 @@
         app:layout_constraintBottom_toBottomOf="@id/etEmail"
         app:layout_constraintRight_toRightOf="@id/etEmail"
         android:layout_marginRight="16dp"
+        android:visibility="invisible"
 
         />
 
@@ -101,9 +103,10 @@
         android:padding="16dp" />
 
     <ImageView
+        android:id="@+id/hide_show_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_eye_password"
+        android:src="@drawable/check_show_hide"
         app:layout_constraintTop_toTopOf="@id/etPassword"
         app:layout_constraintBottom_toBottomOf="@id/etPassword"
         app:layout_constraintRight_toRightOf="@id/etPassword"
