Feat: develop Login process and creating Model, PreferenceManager

--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -85,7 +85,7 @@
         android:layout_marginTop="38dp"
         android:background="@drawable/text_editor_selector"
         android:inputType="number"
-        android:text="2"
+        android:text=""
         android:textSize="32sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -101,7 +101,7 @@
         android:layout_marginTop="38dp"
         android:background="@drawable/text_editor_selector"
         android:inputType="number"
-        android:text="3"
+        android:text=""
         android:textSize="32sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -118,7 +118,7 @@
         android:layout_marginTop="38dp"
         android:background="@drawable/text_editor_selector"
         android:inputType="number"
-        android:text="4"
+        android:text=""
         android:textSize="32sp"
         android:textStyle="bold"
         android:gravity="center"
@@ -135,7 +135,7 @@
         android:layout_marginTop="38dp"
         android:background="@drawable/text_editor_selector"
         android:inputType="number"
-        android:text="5"
+        android:text=""
         android:textSize="32sp"
         android:textStyle="bold"
         android:gravity="center"
