--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,17 @@
         />
 
     <TextView
+        android:id="@+id/signInError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="@string/signInError"
+        android:textColor="#EC0B0B"
+        app:layout_constraintBottom_toTopOf="@id/signIn_text"
+        android:visibility="invisible"
+        />
+
+    <TextView
         android:id="@+id/signIn_text"
         android:layout_width="339dp"
         android:layout_height="wrap_content"
@@ -35,7 +46,7 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/ic_star"
         android:layout_marginTop="54dp"
-        android:text="Sign in"/>
+        android:text="@string/signIn"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,6 +86,20 @@
         android:visibility="invisible"
 
         />
+
+    <TextView
+        android:id="@+id/invalidEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etEmail"
+        android:text="@string/invalid_email"
+        android:layout_marginLeft="10dp"
+        android:textColor="#EC0505"
+        android:textSize="10sp"
+        android:visibility="invisible"
+        />
+
 
 
     <TextView
