--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -54,7 +54,62 @@
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/back_btn"
         android:layout_marginTop="18dp"
-        android:text="Sign in"/>
+        android:text="Sign Up"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvFirstName"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:lineSpacingExtra="3.5sp"
+        android:text="@string/firstName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signIn_text"
+        android:layout_marginTop="18dp"
+        />
+
+    <EditText
+        android:id="@+id/etFirstName"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        app:layout_constraintTop_toBottomOf="@id/tvFirstName"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/text_editor_selector"
+        android:hint="@string/yourName"
+        android:inputType="textEmailAddress"
+        android:padding="16dp"
+        android:paddingEnd="30dp"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvLastName"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:lineSpacingExtra="3.5sp"
+        android:text="@string/lastName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etFirstName"
+        android:layout_marginTop="9dp"
+        />
+
+    <EditText
+        android:id="@+id/etLastname"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        app:layout_constraintTop_toBottomOf="@id/tvLastName"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/text_editor_selector"
+        android:hint="@string/yourLastname"
+        android:inputType="textEmailAddress"
+        android:padding="16dp"
+        android:paddingEnd="30dp"/>
+
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,8 +121,8 @@
         android:lineSpacingExtra="3.5sp"
         android:text="@string/On_boarding_email_address"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signIn_text"
-        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@id/etLastname"
+        android:layout_marginTop="9dp"
         />
 
     <EditText
@@ -138,6 +193,20 @@
         app:layout_constraintTop_toBottomOf="@id/etPassword"
         android:layout_marginTop="9dp"
         />
+    <TextView
+        android:id="@+id/passwordError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/passwordError"
+        android:textColor="#F80505"
+        app:layout_constraintTop_toTopOf="@id/confirm_password_text"
+        app:layout_constraintLeft_toRightOf="@id/confirm_password_text"
+        app:layout_constraintBottom_toBottomOf="@id/confirm_password_text"
+        android:layout_marginLeft="5dp"
+        android:visibility="invisible"
+        />
+
+
 
     <EditText
         android:id="@+id/etConfirmPassword"
@@ -278,14 +347,27 @@
         android:textSize="14dp"
         />
 
+    <TextView
+        android:id="@+id/signUpError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/signUpError"
+        android:textColor="#F80505"
+        app:layout_constraintBottom_toTopOf="@id/btn_SignUp"
+        android:visibility="invisible"
+        />
+
+
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_SignUp"
             app:layout_constraintTop_toBottomOf="@id/tvAccept"
             android:layout_marginTop="19dp"
             android:background="@drawable/primary_btn"
-            android:text="Next"
+            android:text="@string/register"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:lineSpacingExtra="4sp"
