Feat: develop verify email and going reset password

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -72,6 +72,23 @@
         android:layout_marginTop="38dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/verificationEmailError"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="#FF0000"
+        android:lineSpacingExtra="3.5sp"
+        android:text="@string/verificationEmailError"
+        app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDetailed"
+        app:layout_constraintLeft_toRightOf="@id/email_text"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="38dp"
+        android:visibility="invisible"
+        />
+
+
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
