--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -73,6 +73,22 @@
         android:layout_marginTop="38dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/resetPasswordError"
+        android:textStyle="normal"
+        android:textSize="14sp"
+        android:textColor="#ED0606"
+        android:lineSpacingExtra="3.5sp"
+        android:text="@string/resetPasswordError"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@id/tvNewPasswordText"
+        app:layout_constraintLeft_toRightOf="@id/tvPassword"
+        android:layout_marginTop="38dp"
+        android:visibility="invisible"
+        />
+
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
