--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,7 +2,13 @@
 <network-security-config>
 
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">dev-api.shoppingmall.beknumonov.com</domain>
+        <domain includeSubdomains="true">104.236.193.179</domain>
+        <domain includeSubdomains="true">t1.daumcdn.net</domain>
+        <domain includeSubdomains="true">postcode.map.daum.net</domain>
+        <domain includeSubdomains="true"> annyong.store</domain>
+        <domain includeSubdomains="true"> address.annyong.store</domain>
+        <domain includeSubdomains="true">address.shoppingmall.beknumonov.com/</domain>
+
     </domain-config>
 </network-security-config>
 
