--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,31 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Hitechmart" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Hitechmart" parent="Base.Theme.Hitechmart" />
-    <style name="Theme.Hitechmart.Onboarding" parent="Base.Theme.Hitechmart">
-        <item name="android:statusBarColor">@color/white</item>
+    <style name="AppTheme" parent="Base.AppTheme" />
 
+
+    <style name="AppTheme.Onboarding" parent="Base.AppTheme">
+
+
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
+    <style name="ActiveIndicator" parent="">
+        <item name="android:width">@dimen/m3_bottom_nav_item_active_indicator_width</item>
+        <item name="android:height">@dimen/m3_bottom_nav_item_active_indicator_height</item>
+        <item name="marginHorizontal">@dimen/m3_bottom_nav_item_active_indicator_margin_horizontal</item>
+        <item name="shapeAppearance">@style/ShapeAppearance.M3.Comp.NavigationBar.ActiveIndicator.Shape</item>
+        <item name="android:color">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppTheme.BottomBar" parent="Base.AppTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:textColorSecondary">@color/colorPrimary</item>
+        <item name="android:colorForeground">@color/colorPrimary</item>
+
+    </style>
 </resources>
