--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="2dp"
+    android:layout_marginVertical="5dp"
     android:layout_marginHorizontal="10dp"
     app:cardElevation="3dp"
     android:layout_marginTop="5dp">
@@ -61,6 +62,8 @@
             android:letterSpacing="0.04"
             android:lineSpacingExtra="4sp"
             android:minLines="2"
+            android:maxLines="2"
+
             android:paddingHorizontal="8dp"
             android:textColor="#4b4949"
             android:textSize="12sp"
