feat: develop ProductlistActivity and getting products by CLASSIFICATION CATEGORY SUBPRODUCT from Api

--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -63,7 +63,7 @@
             android:lineSpacingExtra="4sp"
             android:minLines="2"
             android:maxLines="2"
-
+            android:ellipsize="end"
             android:paddingHorizontal="8dp"
             android:textColor="#4b4949"
             android:textSize="12sp"
